src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aura</fullName>
                </value>
                <value>
                    <fullName>Fields</fullName>
                </value>
                <value>
                    <fullName>Limits</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>MC Scripts</fullName>
                </value>
                <value>
                    <fullName>MC APIs</fullName>
                </value>
                <value>
                    <fullName>MC Data Management</fullName>
                </value>
                <value>
                    <fullName>MC Admin</fullName>
                </value>
                <value>
                    <fullName>MC Marketing</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>First Application</fullName>
                </value>
                <value>
                    <fullName>Second Application</fullName>
                </value>
                <value>
                    <fullName>MC Specialist</fullName>
                </value>
                <value>
                    <fullName>MC Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Category__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Categories</fullName>
        <active>true</active>
        <label>Categories</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>